Import google-analytics and get some data

--- a/elements.html
+++ b/elements.html
@@ -53,6 +53,8 @@
 <link rel="import" href="bower_components/firebase-element/firebase-collection.html">
 <link rel="import" href="bower_components/firebase-element/firebase-document.html">
 <link rel="import" href="bower_components/firebase-element/firebase-query-behavior.html">
+<link rel="import" href="bower_components/google-signin/google-signin.html">
+<link rel="import" href="bower_components/google-analytics/google-analytics.html">
 
 <!-- Elements from customelements.io-->
 <link rel="import" href="bower_components/file-tree/file-tree.html">
