--- a/styles.html
+++ b/styles.html
@@ -410,6 +410,7 @@
     --iron-image-width: 50px;
     --iron-image-height: 50px;
     border-radius: 50%;
+    margin-left: 24px;
   }
   #toolbar_text{
     margin-left: 15px;
