--- a/styles.html
+++ b/styles.html
@@ -445,6 +445,9 @@
   #sign_in_button{
     height: 36px;
   }
+  #start_button{
+    display: none;
+  }
   #start_button_loading{
     position: absolute;
     left: 0px;
@@ -454,7 +457,6 @@
     bottom: 0px;
     width: 24px;
     height: 24px;
-    display: none;
   }
   #sign_in_logo_small{
     width: 150px;
