--- a/elements.html
+++ b/elements.html
@@ -36,6 +36,7 @@
 <link rel="import" href="bower_components/paper-material/paper-material.html">
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="bower_components/paper-spinner/paper-spinner-lite.html">
 <link rel="import" href="bower_components/paper-menu-button/paper-menu-button.html">
 
 <!-- neon-elements -->
@@ -60,6 +61,7 @@
 <link rel="import" href="bower_components/file-tree/file-tree.html">
 <link rel="import" href="bower_components/paper-swatch-picker/paper-swatch-picker.html">
 <link rel="import" href="bower_components/paper-chip/paper-chip.html">
+<link rel="import" href="bower_components/clipboard-input/clipboard-input.html">
 
 <!-- poly-elements -->
 <link rel="import" href="bower_components/poly-elements/poly-tabs.html">
