--- a/elements.html
+++ b/elements.html
@@ -12,6 +12,7 @@
 <link rel="import" href="bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="bower_components/iron-image/iron-image.html">
+<link rel="import" href="bower_components/iron-meta/iron-meta.html">
 <link rel="import" href="bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
@@ -63,6 +64,7 @@
 <link rel="import" href="bower_components/paper-swatch-picker/paper-swatch-picker.html">
 <link rel="import" href="bower_components/paper-chip/paper-chip.html">
 <link rel="import" href="bower_components/clipboard-input/clipboard-input.html">
+<link rel="import" href="bower_components/paper-autocomplete/paper-autocomplete.html">
 
 <!-- poly-elements -->
 <link rel="import" href="bower_components/poly-elements/poly-tabs.html">
